--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
         <div id="sidebar">
             <p id="p-3">식중독에 좋은 음식</p>
             <div id="container-2">
-                <p>내용</p>
+                <p> ▶손씻기 : 손은 비누를 사용하여 손가락 사이 사이, 손등까지 골고루 흐르는 물로 20초 이상 씻자.</p>
+                <p> ▶익혀 먹기 : 음식물은 중심부 온도가 85℃, 1분 이상 조리 하여 속까지 충분히 익혀 먹자.</p>
+                <p> ▶물은 끓여서 마시자.</p>
             </div>
             <button type="button" id="button-2" onclick="location.href='preven.html'">자세히 보기</button>
         </div>
